[package]
name = "maturin-manylinux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bug_report"
crate-type = ["cdylib"]

[dependencies]
ffmpeg-sys-next = "5.1.1"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
